add tag name to route
